fixed clipping issues with the scrollbar

--- a/app/scss/_accordian.scss
+++ b/app/scss/_accordian.scss
@@ -1,4 +1,7 @@
 #accordian {
+  overflow: auto;
+  height: 92%;
+
   img {
     float: right;
   }
