--- a/app/scss/_faq.scss
+++ b/app/scss/_faq.scss
@@ -3,17 +3,15 @@
   margin-right: auto;
   margin-top: 33%;
   height: 66%;
-  overflow: auto;
 
-  & > p {
-    text-align: center;
+  & > span {
     font-size: 28px;
     font-weight: 700;
-    margin-bottom: 22px;
-    position: sticky;
-    top: 0;
+    margin: 0px auto;
     background-color: white;
-    box-shadow: 0px 13px 8px white;
+    margin-bottom: 22px;
+    display: table;
+    //box-shadow: 0px 13px 8px white;
   }
 
   img {
